# passepartui

./: Cargo.toml  README.md
contrib/: passepartui.desktop
src/: actions.rs  app.rs  app_state.rs  components.rs  event.rs  events.rs  main.rs  theme.rs  utils.rs
src/app/: state.rs
src/components/: button.rs  dashboard.rs  file_popup.rs  help_popup.rs  menu.rs  password_details.rs  password_store.rs  password_table.rs  search_field.rs  status_bar.rs
src/components/password_details/: details_field.rs
src/components/password_store/: password_info.rs
