[package]
name = "passepartui"
description = "A TUI for pass"
version = "0.1.4"
edition = "2021"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/kardwen/passepartui"
keywords = ["password-manager", "pass", "terminal"]
categories = ["authentication", "command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
dirs = "5.0.1"
icu = "1.5.0"
ratatui = { version = "0.29.0", features = ["palette"] }

[dev-dependencies]
clippy = "0.0.302"

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
lto = "thin"
opt-level = 3
debug = 1
strip = false
panic = "abort"
