[package]
name = "passepartui"
description = "A TUI for pass"
version = "0.1.6"
edition = "2021"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/kardwen/passepartui"
keywords = ["password-manager", "pass", "terminal"]
categories = ["authentication", "command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
futures = { version = "0.3.31", features = ["executor", "thread-pool"] }
passepartout = "0.1.5"
ratatui = { version = "0.29.0", features = ["palette"] }

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
lto = "thin"
opt-level = 3
debug = 1
strip = false
panic = "abort"
